<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:scrollbarThumbVertical="@color/login_form_details"
    tools:context=".ui.loginActivity.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <EditText
            android:id="@+id/usernameInputNew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/login_edittext_background"
            android:hint="@string/username_resource"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/login_form_details"
            android:textColorHint="@color/login_form_details_medium"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/firstNameInputNew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/login_edittext_background"
            android:hint="@string/firstname_resource"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/login_form_details"
            android:textColorHint="@color/login_form_details_medium"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline7"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/lastNameInputNew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/login_edittext_background"
            android:hint="@string/lastname_resource"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/login_form_details"
            android:textColorHint="@color/login_form_details_medium"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/petNameInputNew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/login_edittext_background"
            android:hint="@string/security_name_of_the_first_pet_resource"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="@color/login_form_details"
            android:textColorHint="@color/login_form_details_medium"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline9"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/emailInputNew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/login_edittext_background"
            android:hint="@string/email_resource"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/login_form_details"
            android:textColorHint="@color/login_form_details_medium"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline10"
            tools:ignore="Autofill" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password_resource"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            android:layout_margin="15dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline11"
            android:textColorHint="@color/login_form_details_medium"
            app:passwordToggleTint="@color/login_form_details"
            app:hintTextColor="@color/login_form_details"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInputNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:inputType="textPassword"
                android:background="@drawable/login_edittext_background"
                android:textColor="@color/login_form_details"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogInNew"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/log_in_button_background"
            android:text="@string/register_resource"
            android:textAllCaps="false"
            android:textColor="@color/login_form_details_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline14"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            style="@style/guideline_style"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            style="@style/guideline_style"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            style="@style/guideline_style"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            style="@style/guideline_style"
            app:layout_constraintGuide_percent="0.6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            style="@style/guideline_style"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            style="@style/guideline_style"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            style="@style/guideline_style.vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            style="@style/guideline_style.vertical"
            app:layout_constraintGuide_percent="0.9" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>