...
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_levels">Levels</string>

    <string name="did_not_entered_login_info">You didn\'t enter required info!</string>
    <string name="username_or_password_not_correct">Your username or password is not correct!</string>
    <string name="cannot_be_empty">This field can\'t be empty!</string>
    <string name="title_resource">Tons of riddles to boost up your brain power!</string>
    <string name="start_resource">Start</string>
    <string name="log_out_resource">Log out</string>
    <string name="log_out_question">Are you sure you want to log out?</string>
    <string name="yes_resource">yes</string>
    <string name="no_resource">no</string>
    <string name="account_resource">Account</string>
    <string name="initial_letter" translatable="false">A</string>
    <string name="delete_resource">Delete</string>
    <string name="password_demands">Password must have at least 8 characters, one letter and one number!</string>
    <string name="registration_success">You successfully registered!</string>
    <string name="username_taken">This username is already taken.</string>
    <string name="valid_email">Please insert valid email address!</string>
    <string name="changed_password_success">You successfully changed your password!</string>
    <string name="inserted_info_not_correct">Inserted username or security text is not correct!</string>
    <string name="high_scores_resource">High scores</string>
    <string name="position_resource">Level %1$s</string>
    <string name="game_resource">Game</string>
    <string name="score_resource">Score</string>
...
