...
        app:layout_constraintBottom_toTopOf="@id/guideline16"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_edittext_background"
        android:hint="@string/username_resource"
        android:inputType="text"
        android:padding="16dp"
...
        app:layout_constraintBottom_toTopOf="@+id/guideline18"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guideline17">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:inputType="textPassword"
            android:background="@drawable/login_edittext_background"
            android:textColor="@color/login_form_details"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/log_in_button_background"
        android:text="@string/login_now_resource"
        android:textAllCaps="false"
        android:textColor="@color/login_form_details_medium"
...
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        style="@style/guideline_style"
        app:layout_constraintGuide_percent="0.85" />

    <TextView
        android:id="@+id/newAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
...
