<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_levels"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_levels" />
        <item
            android:id="@+id/nav_scores"
            android:icon="@drawable/ic_fico_score"
            android:title="@string/high_scores_resource"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings_resource"/>

    </group>
    <item android:id="@+id/titleItem"
        android:title="@string/account_resource"
        >
        <menu>
            <item
                android:id="@+id/log_out"
                android:title="@string/log_out_resource"
                android:onClick="logOutMenuClick"
                android:icon="@drawable/ic_log_out"/>
        </menu>
    </item>
</menu>
